--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="Js/phaser.js"></script>
 		<script src="Js/MenuScene.js"></script>
 		<script src="Js/Game.js"></script>
+		<script src="Js/GameOver.js"></script>
 		<script src="Js/gameConfig.js"></script>
 
 	</head>
