--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Breakout Clone</title>
+ 	 	<meta name="viewport" content="width=device-width, user-scalable=no">
+ 	 	
+        <style>
+            body{
+                margin: 0;
+                padding: 0;
+            }
+            canvas{
+                width:100%,
+                height: 100%
+            }
+        </style>
+
 
 		<script src="Js/phaser.js"></script>
 		<script src="Js/MenuScene.js"></script>
